fixed the credit-line-details in dark mode

--- a/src/app/components/loan/workstation /credit-line/credit-line-details/credit-line-details.component.scss
+++ b/src/app/components/loan/workstation /credit-line/credit-line-details/credit-line-details.component.scss
@@ -9,10 +9,3 @@
   margin-left: 21px;
   top: -16px;
 }
-
-.initialOrPending {
-  background: #bddaf6;
-}
-.cancelled {
-  background: #e2ee62;
-}
